Bug menu collision on small screens

--- a/WebContent/css/gladiator.css
+++ b/WebContent/css/gladiator.css
@@ -32,7 +32,7 @@ a:visited {
 .header {
     min-height: 80px;
     color: #333;
-    padding: 1em;
+    padding: 1em 1em 0em;
     text-align: center;
     background: #fff;
 }
